# wulpus

./: .gitignore
.github/docker/ccstudio-msp430/: Dockerfile
.github/docker/nrf5-sdk/: Dockerfile
.github/workflows/: build-ccstudio-image.yml  build-msp430.yml  build-nrf5-sdk-image.yml  build-nrf52-dongle.yml  build-nrf52-probe.yml  release-firmware.yml
fw/msp430/wulpus_msp430_firmware/: .ccsproject  .cproject  .gitignore
fw/nrf52/: .gitignore  DIFFERENCE.md
fw/nrf52/ble_peripheral/US_probe_nRF52_firmware/: us_defines.h
fw/nrf52/ble_peripheral/US_probe_nRF52_firmware/pca10040/s132/armgcc/: Makefile
fw/nrf52/ble_peripheral/US_probe_nRF52_firmware/pca10040/s132/ses/: US_probe_nRF52_firmware.emProject
fw/nrf52/peripheral/US_probe_dongle_firmware/: us_ble.c
fw/nrf52/probe_fw/: .gitignore  main.c
fw/nrf52/probe_fw/pca10040/s132/armgcc/: Makefile
fw/nrf52/probe_fw/pca10040/s132/config/: sdk_config.h
fw/nrf52/probe_fw/pca10040/s132/ses/: ble_app_uart_pca10040_s132.emProject  ble_app_uart_pca10040_s132.emSession
fw/nrf52/probe_fw/wulpus/: wulpus_ble.c  wulpus_ble.h  wulpus_common.h  wulpus_config.h  wulpus_gpio.c  wulpus_gpio.h  wulpus_ppi.c  wulpus_ppi.h  wulpus_spi.c  wulpus_spi.h
sw/: .gitignore  Makefile  README.md  main.ipynb  pyproject.toml  test.ipynb  waterbath.ipynb  wulpus_gui.ipynb
sw/examples/: trx_waterbath.json  uss_waterbath.json  waterbath_0.npz
sw/wulpus/: config_package.py  gui.py
sw/wulpus/connection/: connection.py  device.py  direct.py  dongle.py
sw/wulpus/trx_conf/: gen.py  gui.py
sw/wulpus/uss_conf/: gen.py  gui.py
(+1 files in other folders)
