[project]
name = "wulpus-sw"
version = "0.1.0"
description = "The software used for the WULPUS probe"
requires-python = ">3.13"
dependencies = [
    "bleak>=2.0.0",
    "imgui-bundle>=1.92.5",
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "scipy>=1.16.3",
]
